--- a/proyecto1/index.html
+++ b/proyecto1/index.html
@@ -3,41 +3,26 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>AppMusic - Musica para todos</title>
     <link
-      href="https://fonts.googleapis.com/css2?family=Balsamiq+Sans"
+      href="https://fonts.googleapis.com/css2?family=Cairo&display=swap"
       rel="stylesheet"
     />
     <link rel="stylesheet" href="./estilo.css" />
   </head>
   <body>
-    <header>
-      <div class="contenedor">
-        <img src="./img/logo_white.png" alt="" />
+    <header class="header">
+      <img class="header__img" src="./img/logo_white.png" alt="" />
+      <div class="header__menu">
+        <div class="header__menu--profile">
+          <img src="./img/user.png" alt="user" />
+          <p>Perfil</p>
+        </div>
+        <ul>
+          <li><a href="">Cuenta</a></li>
+          <li><a href="">Cerrar Sesion</a></li>
+        </ul>
       </div>
     </header>
-
-    <div class="contenedor">
-      <div class="discos">
-        <div class="box">1</div>
-        <div class="box">2</div>
-        <div class="box">3</div>
-        <div class="box">4</div>
-        <div class="box">5</div>
-        <div class="box">6</div>
-        <div class="box">7</div>
-        <div class="box">8</div>
-        <div class="box">9</div>
-        <div class="box">10</div>
-        <div class="box">11</div>
-        <div class="box">12</div>
-      </div>
-    </div>
-
-    <footer>
-      <div class="contenedor">
-        <p>Todos los derechos reservados</p>
-      </div>
-    </footer>
   </body>
 </html>
