--- a/proyecto1/index.html
+++ b/proyecto1/index.html
@@ -24,5 +24,43 @@
         </ul>
       </div>
     </header>
+    <section class="main">
+      <h2 class="main__title">¿Qué quieres escuchar hoy?</h2>
+      <input class="input" type="text" placeholder="Buscar..." />
+    </section>
+
+    <section class="music">
+      <h3>Mi música</h3>
+      <section class="container__music">
+        <div class="carousel__container">
+          <div class="carousel__item"></div>
+          <div class="carousel__item"></div>
+          <div class="carousel__item"></div>
+          <div class="carousel__item"></div>
+          <div class="carousel__item"></div>
+          <div class="carousel__item"></div>
+          <div class="carousel__item"></div>
+          <div class="carousel__item"></div>
+          <div class="carousel__item"></div>
+        </div>
+      </section>
+    </section>
+
+    <section class="music">
+      <h3>Mis Playlist</h3>
+      <section class="container__music">
+        <div class="carousel__container">
+          <div class="carousel__item"></div>
+          <div class="carousel__item"></div>
+          <div class="carousel__item"></div>
+          <div class="carousel__item"></div>
+          <div class="carousel__item"></div>
+          <div class="carousel__item"></div>
+          <div class="carousel__item"></div>
+          <div class="carousel__item"></div>
+          <div class="carousel__item"></div>
+        </div>
+      </section>
+    </section>
   </body>
 </html>
