estilo items music

--- a/proyecto1/index.html
+++ b/proyecto1/index.html
@@ -33,15 +33,171 @@
       <h3>Mi música</h3>
       <section class="container__music">
         <div class="carousel__container">
-          <div class="carousel__item"></div>
-          <div class="carousel__item"></div>
-          <div class="carousel__item"></div>
-          <div class="carousel__item"></div>
-          <div class="carousel__item"></div>
-          <div class="carousel__item"></div>
-          <div class="carousel__item"></div>
-          <div class="carousel__item"></div>
-          <div class="carousel__item"></div>
+          <div class="carousel__item">
+            <img src="./img/music/music_1.jpg" alt="Musica" />
+            <div class="carousel-item__details">
+              <div class="carousel-item__details--iconos">
+                <img src="./img/play.png" alt="play" />
+                <!-- <img src="./img/plus.png" alt="plus" /> -->
+              </div>
+              <p class="carousel-item__details--title">Album</p>
+              <p class="carousel-item__details--subtitle">2020</p>
+            </div>
+          </div>
+          <div class="carousel__item">
+            <img src="./img/music/music_2.jpg" alt="Musica" />
+            <div class="carousel-item__details">
+              <div class="carousel-item__details--iconos">
+                <img src="./img/play.png" alt="play" />
+                <!-- <img src="./img/plus.png" alt="plus" /> -->
+              </div>
+              <p class="carousel-item__details--title">Album</p>
+              <p class="carousel-item__details--subtitle">2020</p>
+            </div>
+          </div>
+          <div class="carousel__item">
+            <img src="./img/music/music_3.jpg" alt="Musica" />
+            <div class="carousel-item__details">
+              <div class="carousel-item__details--iconos">
+                <img src="./img/play.png" alt="play" />
+                <!-- <img src="./img/plus.png" alt="plus" /> -->
+              </div>
+              <p class="carousel-item__details--title">Album</p>
+              <p class="carousel-item__details--subtitle">2020</p>
+            </div>
+          </div>
+          <div class="carousel__item">
+            <img src="./img/music/music_4.jpg" alt="Musica" />
+            <div class="carousel-item__details">
+              <div class="carousel-item__details--iconos">
+                <img src="./img/play.png" alt="play" />
+                <!-- <img src="./img/plus.png" alt="plus" /> -->
+              </div>
+              <p class="carousel-item__details--title">Album</p>
+              <p class="carousel-item__details--subtitle">2020</p>
+            </div>
+          </div>
+          <div class="carousel__item">
+            <img src="./img/music/music_5.jpg" alt="Musica" />
+            <div class="carousel-item__details">
+              <div class="carousel-item__details--iconos">
+                <img src="./img/play.png" alt="play" />
+                <!-- <img src="./img/plus.png" alt="plus" /> -->
+              </div>
+              <p class="carousel-item__details--title">Album</p>
+              <p class="carousel-item__details--subtitle">2020</p>
+            </div>
+          </div>
+          <div class="carousel__item">
+            <img src="./img/music/music_1.jpg" alt="Musica" />
+            <div class="carousel-item__details">
+              <div class="carousel-item__details--iconos">
+                <img src="./img/play.png" alt="play" />
+                <!-- <img src="./img/plus.png" alt="plus" /> -->
+              </div>
+              <p class="carousel-item__details--title">Album</p>
+              <p class="carousel-item__details--subtitle">2020</p>
+            </div>
+          </div>
+          <div class="carousel__item">
+            <img src="./img/music/music_2.jpg" alt="Musica" />
+            <div class="carousel-item__details">
+              <div class="carousel-item__details--iconos">
+                <img src="./img/play.png" alt="play" />
+                <!-- <img src="./img/plus.png" alt="plus" /> -->
+              </div>
+              <p class="carousel-item__details--title">Album</p>
+              <p class="carousel-item__details--subtitle">2020</p>
+            </div>
+          </div>
+          <div class="carousel__item">
+            <img src="./img/music/music_3.jpg" alt="Musica" />
+            <div class="carousel-item__details">
+              <div class="carousel-item__details--iconos">
+                <img src="./img/play.png" alt="play" />
+                <!-- <img src="./img/plus.png" alt="plus" /> -->
+              </div>
+              <p class="carousel-item__details--title">Album</p>
+              <p class="carousel-item__details--subtitle">2020</p>
+            </div>
+          </div>
+          <div class="carousel__item">
+            <img src="./img/music/music_4.jpg" alt="Musica" />
+            <div class="carousel-item__details">
+              <div class="carousel-item__details--iconos">
+                <img src="./img/play.png" alt="play" />
+                <!-- <img src="./img/plus.png" alt="plus" /> -->
+              </div>
+              <p class="carousel-item__details--title">Album</p>
+              <p class="carousel-item__details--subtitle">2020</p>
+            </div>
+          </div>
+          <div class="carousel__item">
+            <img src="./img/music/music_5.jpg" alt="Musica" />
+            <div class="carousel-item__details">
+              <div class="carousel-item__details--iconos">
+                <img src="./img/play.png" alt="play" />
+                <!-- <img src="./img/plus.png" alt="plus" /> -->
+              </div>
+              <p class="carousel-item__details--title">Album</p>
+              <p class="carousel-item__details--subtitle">2020</p>
+            </div>
+          </div>
+          <div class="carousel__item">
+            <img src="./img/music/music_1.jpg" alt="Musica" />
+            <div class="carousel-item__details">
+              <div class="carousel-item__details--iconos">
+                <img src="./img/play.png" alt="play" />
+                <!-- <img src="./img/plus.png" alt="plus" /> -->
+              </div>
+              <p class="carousel-item__details--title">Album</p>
+              <p class="carousel-item__details--subtitle">2020</p>
+            </div>
+          </div>
+          <div class="carousel__item">
+            <img src="./img/music/music_2.jpg" alt="Musica" />
+            <div class="carousel-item__details">
+              <div class="carousel-item__details--iconos">
+                <img src="./img/play.png" alt="play" />
+                <!-- <img src="./img/plus.png" alt="plus" /> -->
+              </div>
+              <p class="carousel-item__details--title">Album</p>
+              <p class="carousel-item__details--subtitle">2020</p>
+            </div>
+          </div>
+          <div class="carousel__item">
+            <img src="./img/music/music_3.jpg" alt="Musica" />
+            <div class="carousel-item__details">
+              <div class="carousel-item__details--iconos">
+                <img src="./img/play.png" alt="play" />
+                <!-- <img src="./img/plus.png" alt="plus" /> -->
+              </div>
+              <p class="carousel-item__details--title">Album</p>
+              <p class="carousel-item__details--subtitle">2020</p>
+            </div>
+          </div>
+          <div class="carousel__item">
+            <img src="./img/music/music_4.jpg" alt="Musica" />
+            <div class="carousel-item__details">
+              <div class="carousel-item__details--iconos">
+                <img src="./img/play.png" alt="play" />
+                <!-- <img src="./img/plus.png" alt="plus" /> -->
+              </div>
+              <p class="carousel-item__details--title">Album</p>
+              <p class="carousel-item__details--subtitle">2020</p>
+            </div>
+          </div>
+          <div class="carousel__item">
+            <img src="./img/music/music_5.jpg" alt="Musica" />
+            <div class="carousel-item__details">
+              <div class="carousel-item__details--iconos">
+                <img src="./img/play.png" alt="play" />
+                <!-- <img src="./img/plus.png" alt="plus" /> -->
+              </div>
+              <p class="carousel-item__details--title">Album</p>
+              <p class="carousel-item__details--subtitle">2020</p>
+            </div>
+          </div>
         </div>
       </section>
     </section>
