formulario de sesion y registro

--- a/proyecto1/index.html
+++ b/proyecto1/index.html
@@ -24,6 +24,7 @@
         </ul>
       </div>
     </header>
+
     <section class="main">
       <h2 class="main__title">¿Qué quieres escuchar hoy?</h2>
       <input class="input" type="text" placeholder="Buscar..." />
@@ -218,5 +219,11 @@
         </div>
       </section>
     </section>
+
+    <footer class="footer">
+      <a href="">Términos de uso</a>
+      <a href="">Declaración de privacidad</a>
+      <a href="">Centro de ayuda</a>
+    </footer>
   </body>
 </html>
