--- a/proyecto2/index.html
+++ b/proyecto2/index.html
@@ -4,6 +4,14 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <link rel="stylesheet" href="estilo.css" />
   </head>
-  <body></body>
+  <body>
+    <section class="container">
+      <article class="item header"></article>
+      <article class="item main"></article>
+      <article class="item aside"></article>
+      <article class="item footer"></article>
+    </section>
+  </body>
 </html>
