--- a/proyecto1/session.html
+++ b/proyecto1/session.html
@@ -32,9 +32,10 @@
           <input class="input" type="password" placeholder="Contraseña" />
           <button class="button">Iniciar Sesión</button>
           <div class="login__container--remenber">
-            <label for="">
-              <input type="checkbox" id="cbox1" value="checkbox" />Recuerdame
+            <label for="cbox1">
+              <input type="checkbox" id="cbox1" value="checkbox" /> Recuerdame
             </label>
+
             <a href="/">Olvide mi contraseña</a>
           </div>
         </form>
