--- a/portafolio/index.html
+++ b/portafolio/index.html
@@ -13,20 +13,23 @@
   </head>
   <body>
     <header class="header">
-      <figure class="logo">
-        <img src="https://via.placeholder.com/150X50" alt="logo" />
-      </figure>
-      <nav class="menu">
-        <ul>
-          <li><a href="#perfil">Perfil</a></li>
-          <li><a href="#portafolio">Portafolio</a></li>
-          <li><a href="#eventos">Eventos</a></li>
-          <li><a href="#contacto">Contacto</a></li>
-        </ul>
-      </nav>
+      <div class="container">
+        <figure class="logo">
+          <img src="https://via.placeholder.com/150X50" alt="logo" />
+        </figure>
+        <nav class="menu">
+          <ul>
+            <li><a href="#perfil">Perfil</a></li>
+            <li><a href="#portafolio">Portafolio</a></li>
+            <li><a href="#eventos">Eventos</a></li>
+            <li><a href="#contacto">Contacto</a></li>
+          </ul>
+        </nav>
+      </div>
     </header>
 
     <section id="principal" class="hero">
+      <div class="container">
       <h1>
         Hola! mi nombre es Diego Briceño <br>
         soy <strong>Desarrollador Frontend</strong><br>
@@ -35,66 +38,119 @@
       </h1>
     </section>
 
-    <div class="triangulo"></div>
-
     <section id="portafolio" class="portfolio">
-      <h2>Portafolio</h2>
-      <article class="project">
-        <div class="project_details">
-          <h3 class="project_title">Titulo de Proyecto</h3>
-          <h4 class="project_curse"">Javascript HTML</h4>
-          <p class="project_date">
-            <small><strong>Fecha:</strong> Mayo 2020</small>
-          </p>
-          <p class="project_url">
-            <small
-              ><strong>Link del proyecto:</strong><a href="">Proyecto</a></small
-            >
-          </p>
-          <p class="project_description">
-            Descripcion del Proyecto: Lorem ipsum dolor sit amet consectetur
-            adipisicing elit. Eos voluptatum eligendi commodi veniam quia saepe
-            minima voluptates enim. Aspernatur maxime voluptatem necessitatibus
-            corporis ipsum expedita culpa eveniet officiis quisquam laboriosam?
-          </p>
-        </div>
-        <figure class="project_image_wrapper">
-          <img class="project_image" src="https://via.placeholder.com/450X250.png" alt="" />
-        </figure>
-      </article>
+      <div class="container">
+        <h2>Portafolio</h2>
+        <article class="project">
+          <div class="project_details">
+            <h3 class="project_title">Titulo de Proyecto</h3>
+            <h4 class="project_curse"">Javascript HTML</h4>
+            <p class="project_date"><strong>Fecha:</strong> Mayo 2020</p>
+            <p class="project_url"><strong>Link del proyecto: </strong><a href="">Proyecto</a></p>
+            <p class="project_description">
+              Descripcion del Proyecto: Lorem ipsum dolor sit amet consectetur
+              adipisicing elit. Eos voluptatum eligendi commodi veniam quia saepe
+              minima voluptates enim. Aspernatur maxime voluptatem necessitatibus
+              corporis ipsum expedita culpa eveniet officiis quisquam laboriosam?
+            </p>
+          </div>
+          <figure class="project_image_wrapper">
+            <img class="project_image" src="https://via.placeholder.com/400X250.png" alt="" />
+          </figure>
+        </article>
+
+        <article class="project">        
+          <div class="project_details">
+            <h3 class="project_title">Titulo de Proyecto</h3>
+            <h4 class="project_curse"">Javascript HTML</h4>
+            <p class="project_date"><strong>Fecha:</strong> Mayo 2020</p>
+            <p class="project_url"><strong>Link del proyecto: </strong><a href="">Proyecto</a></p>
+            <p class="project_description">
+              Descripcion del Proyecto: Lorem ipsum dolor sit amet consectetur
+              adipisicing elit. Eos voluptatum eligendi commodi veniam quia saepe
+              minima voluptates enim. Aspernatur maxime voluptatem necessitatibus
+              corporis ipsum expedita culpa eveniet officiis quisquam laboriosam?
+            </p>
+          </div>
+          <figure class="project_image_wrapper">
+            <img class="project_image" src="https://via.placeholder.com/400X250.png" alt="" />
+          </figure>
+        </article>
+
+      </div>
     </section>
 
-    <section id="eventos" class="events">
+    <div class="container">
       <h2>Eventos</h2>
-      <article class="event">
-        <figure class="event_image_wrapper">
-          <img class="event_image" src="https://via.placeholder.com/450X250.png" alt="" />
-        </figure>
-        <h3 class="event_title">Titulo del evento</h3>
-        <p class="event_description">
-          Descripcion del Proyecto: Lorem ipsum dolor sit amet consectetur
-          adipisicing elit. Eos voluptatum eligendi commodi veniam quia saepe
-          minima voluptates enim. Aspernatur maxime voluptatem necessitatibus
-          corporis ipsum expedita culpa eveniet officiis quisquam laboriosam?
-        </p>
-        <p class="event_url">
-          <small><strong>Link del evento:</strong><a href="">Evento</a></small>
-        </p>
-      </article>
+    </div>
+
+    <section id="eventos" class="events">
+      <div class="container">
+
+        <article class="event">
+          <figure class="event_image_wrapper">
+            <img class="event_image" src="./fondo.jpg" alt="" />
+          </figure>
+          <div class="event_details">
+            <h3 class="event_title">Titulo del evento</h3>
+            <p class="event_description">
+              Descripcion del Proyecto: Lorem ipsum dolor sit amet consectetur
+              adipisicing elit. Eos voluptatum eligendi commodi veniam quia saepe
+              minima voluptates enim. Aspernatur maxime voluptatem necessitatibus
+              corporis ipsum expedita culpa eveniet officiis quisquam laboriosam?
+            </p>
+            <p class="event_url">
+              <strong>Link del evento: </strong><a href="">Evento</a>
+            </p>
+          </div>
+        </article>
+        
+        <article class="event">
+          <figure class="event_image_wrapper">
+            <img class="event_image" src="./fondo.jpg" alt="" />
+          </figure>
+          <div class="event_details">
+            <h3 class="event_title">Titulo del evento</h3>
+            <p class="event_description">
+              Descripcion del Proyecto: Lorem ipsum dolor sit amet consectetur
+              adipisicing elit. Eos voluptatum eligendi commodi veniam quia saepe
+              minima voluptates enim. Aspernatur maxime voluptatem necessitatibus
+              corporis ipsum expedita culpa eveniet officiis quisquam laboriosam?
+            </p>
+            <p class="event_url">
+              <strong>Link del evento: </strong><a href="">Evento</a>
+            </p>
+          </div>
+        </article>
+      </div>
     </section>
 
     <section id="contacto" class="contact">
-      <form action="" class="form_email">
+      <div class="container">
+
         <h2>Contacto</h2>
-        <input type="text" name="" id="" placeholder="Indicanos tu email" />
-        <input type="submit" value="Enviar" />
-      </form>
+        <div class="wrapper">
+          <form action="" class="form_email">
+            <input type="text" name="" id="email" placeholder="Dejame tu email" />
+            <input type="submit" id="btn" value="Enviar" />
+          </form>
+          
+          <div class="social">
+            <a href="" class="social-link facebook"></a>
+            <a href="" class="social-link instagram"></a>
+            <a href="" class="social-link twitter"></a>
+            <a href="" class="social-link github"></a>
+          </div>
+        </div>
+      </div>
     </section>
 
     <footer class="footer">
-      <div>Derechos reservados 2020 </div>
-      <div>Correo: diegobricep@gmail.com</div>
-      <div>@diegobrice</div>
-    </footer>
+      <div class="container">
+        <div>Derechos reservados 2020 </div>
+        <div>Correo: diegobricep@gmail.com</div>
+        <div>@diegobrice</div>
+      </div>
+      </footer>
   </body>
 </html>
