--- a/grid/index.html
+++ b/grid/index.html
@@ -8,26 +8,10 @@
   </head>
   <body>
     <section class="container">
-      <div class="item">contenido #1</div>
-      <div class="item">contenido #2</div>
-      <div class="item">contenido #3</div>
-      <div class="item">
-
-        <div class="item">subitem #1</div>
-        <div class="item">subitem #2</div>
-        <div class="item">subitem #3</div>
-        <div class="item">subitem #4</div>
-        <div class="item">subitem #5</div>
-        <div class="item">subitem #6</div>
-      </div>
-      <div class="item">contenido #5</div>
-      <div class="item">contenido #6</div>
-      <div class="item">contenido #7</div>
-      <div class="item">contenido #8</div>
-      <div class="item">contenido #9</div>
-      <div class="item">contenido #10</div>
-      <div class="item">contenido #11</div>
-      <div class="item">contenido #12</div>
+      <div class="item header">header #1</div>
+      <div class="item aside">aside #2</div>
+      <div class="item contenido">contenido #3</div>
+      <div class="item footer">footer #6</div>
     </section>
     </div>
   </body>
