--- a/grid/index.html
+++ b/grid/index.html
@@ -7,12 +7,26 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <section class="container">
-      <div class="item header">header #1</div>
-      <div class="item aside">aside #2</div>
-      <div class="item contenido">contenido #3</div>
-      <div class="item footer">footer #6</div>
+    <section class="container2">
+      <div class="item2 header">header #1</div>
+      <div class="item2 aside">aside #2</div>
+      <div class="item2 contenido">contenido #3</div>
+      <div class="item2 footer">footer #6</div>
     </section>
+
+    <section class="container1">
+      <div class="item">item #1</div>
+      <div class="item">item #2</div>
+      <div class="item">item #3</div>
+      <div class="item">item #4</div>
+      <div class="item">item #5</div>
+      <div class="item">item #6</div>
+      <div class="item">item #6</div>
+      <div class="item">item #6</div>
+      <div class="item">item #6</div>
+      <div class="item">item #6</div>
+    </section>
+
     </div>
   </body>
 </html>
