--- a/portafolio/index.html
+++ b/portafolio/index.html
@@ -17,9 +17,11 @@
         <figure class="logo">
           <img src="https://via.placeholder.com/150X50" alt="logo" />
         </figure>
+        <div class="burger">
+          <img class="burger-img" src="./menu.png" alt="" width="25px">
+        </div>
         <nav class="menu">
           <ul>
-            <li><a href="#perfil">Perfil</a></li>
             <li><a href="#portafolio">Portafolio</a></li>
             <li><a href="#eventos">Eventos</a></li>
             <li><a href="#contacto">Contacto</a></li>
@@ -31,10 +33,10 @@
     <section id="principal" class="hero">
       <div class="container">
       <h1>
-        Hola! mi nombre es Diego Briceño <br>
-        soy <strong>Desarrollador Frontend</strong><br>
-        y puedo ayudarte creando sitios web <br>
-        con <strong class="red">HTML</strong>, <strong>CSS</strong> y <strong>JS</strong>.
+        Hola! mi nombre es Diego Briceño 
+        soy <strong>Desarrollador Frontend</strong>
+        y puedo ayudarte creando sitios web 
+        con <strong class="red">HTML, CSS y JS.</strong>
       </h1>
     </section>
 
@@ -85,7 +87,6 @@
     </div>
 
     <section id="eventos" class="events">
-      <div class="container">
 
         <article class="event">
           <figure class="event_image_wrapper">
@@ -122,7 +123,6 @@
             </p>
           </div>
         </article>
-      </div>
     </section>
 
     <section id="contacto" class="contact">
@@ -148,9 +148,10 @@
     <footer class="footer">
       <div class="container">
         <div>Derechos reservados 2020 </div>
-        <div>Correo: diegobricep@gmail.com</div>
         <div>@diegobrice</div>
       </div>
       </footer>
+
+      <script src="./app.js"></script>
   </body>
 </html>
